That should fix the nav spacing issue

--- a/style.css
+++ b/style.css
@@ -239,6 +239,9 @@ input[type=number] {
     .testNext {
         right: 5%;
     }
+    .navItems {
+        display: flex;
+    }
 }
 
 /* -------------------------------------------------------- */
@@ -268,7 +271,7 @@ input[type=number] {
         text-align: center;
     }
     .navItems {
-        visibility: hidden;
+        display: none;
     }
     .mobileMenu {
         display: flex;
